# jw-basic

./: Cargo.toml  LICENSE-MIT  README.md
examples/: ahlbench.bas  demo.bas  hello_world.bas  moose3d.bas  raycast.bas  sieve.bas
src/: lib.rs  main.rs  tests.rs
src/eval/: charset.rs  instr.rs  mod.rs  palette.rs
src/syntax/: expr.rs  literal.rs  mod.rs
src/token/: input.rs  mod.rs
tests/: headless.rs
tests/program/: array.bas  assign.bas  cls.bas  color.bas  dim.bas  do_loop.bas  exit.bas  for_next.bas  function.bas  get_put.bas  goto.bas  graphics.bas  if_then.bas  locate.bas  modulus.bas  peek_poke.bas  rnd.bas  select.bas  sub.bas  while.bas
