[package]
name = "jw-basic"
version = "0.1.0"
authors = ["John Wells <john@attackgoat.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A BASIC language interpreter. Does not conform to existing standards. Mostly a toy."

[features]
default = []
profile-with-puffin = ["dep:puffin_egui", "screen-13/profile-with-puffin", "screen-13-egui"]

[dependencies]
anyhow = "1.0"
bytemuck = "1.12"
clap = { version = "4.1.4", features = ["derive"] }
glam = "0.25"
inline-spirv = "0.1"
log = "0.4"
nom = "7.1"
nom_locate = "4.1"
pretty_env_logger = "0.5"
profiling = "1.0"
puffin_egui = { version = "0.25", optional = true }
rand = "0.8"
screen-13 = { git = "https://github.com/attackgoat/screen-13.git", tag = "v0.9.4" }
screen-13-egui = { git = "https://github.com/attackgoat/screen-13.git", tag = "v0.9.4", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
bmp = "0.5"
lazy_static = "1.4"
